feat:stabilize WS build failure with jdk 17- EXO-60344 (#35)
prior to this change, when upgrading to JDK 17 WS throws many exceptions and fails when building: " module java.base does not opens java.lang", " unreported exception java.lang.Throwable; must be caught or declared to be thrown
.". This change will fix these errors.